--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -17,7 +17,7 @@
 {% endif %}
 {% set year = '2018' %}
 
-    <div class="container-fluid">
+    <div class="container-fluid bg-dark py-3">
 
         <div class="row d-flex flex-row m-3">
 
@@ -52,13 +52,12 @@
                             <a class="nav-link text-light" href="#Mot_fin">Mot de la fin</a>
                         </li>
                     </ul>
-                </div>
             </nav>
         </div>
 
         <div id="Presentation" class="row d-flex flex-row m-3 align-items-center">
             <div class="col-md-6">
-                <h5 class="text-justify text-left font-weight-bold">
+                <h5 class="text-justify text-left text-white font-weight-bold">
                     {{course.title}}
                 </h5>
                 <div class="d-flex flex-row align-items-center">
@@ -66,45 +65,41 @@
                     <i class="fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="mx-1 fas fa-circle text-light rounded-circle border border-dark"></i>
                     <i class=" fas fa-circle text-light rounded-circle border border-dark"></i>
-                    <span class="px-3 border-right border-dark">Niveau débutant</span>
+                    <span class="px-3 text-white border-right border-dark">Niveau débutant</span>
                     {% elseif course.level == "intermediate" %}
                     <i class="fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="mx-1 fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="fas fa-circle text-light rounded-circle border border-dark"></i>
-                    <span class="px-3 border-right border-dark">Niveau intermediare</span>
+                    <span class="px-3 text-white border-right border-dark">Niveau intermediare</span>
                     {% elseif course.level == "advanced" %}
                     <i class="fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="mx-1 fas fa-circle text-info rounded-circle border border-dark"></i>
                     <i class="fas fa-circle text-info rounded-circle border border-dark"></i>
-                    <span class="px-3 border-right border-dark" >Niveau avancé</span>
+                    <span class="px-3 text-white border-right border-dark" >Niveau avancé</span>
                     {% endif %}
-                    <span class="mx-3">Domaine disciplinaire : {{course.domain}}</span>
+                    <span class="mx-3 text-white">Domaine disciplinaire : {{course.domain}}</span>
                 </div>
             </div>
             <div class="col-md-6">
-                {# {% for parentInfo in parent %}
-                    {% for parentInfo in parent.courseInfos %}
-                    {% endfor %}
-                {% endfor %}  #}
                 <div class="row d-flex flex-row align-items-stretch ">
                     {% if course.course.parents|length != 1 %}
                     {% else %}
-                        <div class="col-md-6 d-flex flex-row border-left border-dark align-items-center">
-                            <span class="font-weight-bold">{{ parent.courseInfos[0].title }}</span>
+                        <div class="col-md-6 d-flex flex-row border-left border-white align-items-center">
+                            <span class="font-weight-bold text-white">{{ parent.courseInfos[0].title }}</span>
                         </div>
-                    <div class="col-md-3 border-left border-dark">
+                    <div class="col-md-3 border-left border-white">
                         <div class="row d-flex flex-row justify-content-center font-weight-bold"> 
-                            <h2 class="m-0">{{parent.courseInfos[0].ects}}</h2> 
+                            <h2 class="m-0 text-white">{{parent.courseInfos[0].ects}}</h2> 
                         </div>
-                        <div class="row d-flex flex-row justify-content-center"> 
+                        <div class="row d-flex flex-row justify-content-center text-white"> 
                             ECTS 
                         </div>
                     </div>
-                    <div class="col-md-3 border-left border-dark ">
+                    <div class="col-md-3 border-left border-white ">
                         <div class="row d-flex flex-row justify-content-center font-weight-bold">
-                            <h2 class="m-0">{{ parent.courseInfos[0].course.children|length }}</h2>
+                            <h2 class="m-0 text-white">{{ parent.courseInfos[0].course.children|length }}</h2>
                         </div>
-                        <div class="row d-flex flex-row justify-content-center"> 
+                        <div class="row d-flex flex-row justify-content-center text-white"> 
                             UCUE 
                         </div>
                     </div>
@@ -116,10 +111,10 @@
 
         <div class="row d-flex flex-row m-3">
             <div class="col-md-5">
-                <p class="text-justify text-left">
+                <p class="text-justify text-left text-white">
                     {{course.summary|raw}}
                 </p>
-                <p class="text-justify text-left">
+                <p class="text-justify text-left text-white">
                     Equipe enseignante: 
                     {% for teacher in course.courseTeachers %} 
                         {% if loop.last %}
@@ -137,7 +132,7 @@
                         {% endif %}
                     {% endfor %} 
                 </p>
-                <p class="text-justify text-left">
+                <p class="text-justify text-left text-white">
                     Période : <span class="font-weight-bold"> {{course.period}} </span>
                 </p>
             </div>
@@ -154,7 +149,7 @@
         </div>
 
 
-        <div class="row d-flex flex-row justify-content-around ">
+        <div class="row d-flex flex-row justify-content-around text-white">
             <div class="col-md-4 media d-flex align-items-center">
                 <i class="fas m-3 fa-4x fa-map-marker-alt"></i>
                 <span class="font-weight-bold media-body"> {{course.structure.campus}} </span>
@@ -235,7 +230,7 @@
 
         <div id="Objectifs_cours" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
-                <h4 class="text-justify text-left font-weight-bold">
+                <h4 class="text-justify text-left font-weight-bold text-white">
                     Objectifs du cours
                 </h4>
             </div>
@@ -251,7 +246,7 @@
             </div>
         </div>
         <div class="row d-flex flex-row">
-            <div class="col-md-12 d-flex flex-row justify-content-center align-items-center">
+            <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
                 <h5 class="m-2">A la fin de ce cours, je serai capable de...</h5>
             </div>
         </div>
@@ -276,7 +271,7 @@
                     <h5 class="m-0">PREREQUIS</h5>
                 </div>
                 <div class="row d-flex flex-row">
-                    <div class="col-md-12 d-flex flex-row justify-content-center align-items-center">
+                    <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
                         <h5 class="m-2">Avant de suivre ce cours, je dois...</h5>
                     </div>
                 </div>
@@ -290,7 +285,7 @@
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">REMEDIATION / AIDE A LA REUSSITE</h5>
                 </div>
-                <div class="col-md-12 d-flex flex-row justify-content-center align-items-center">
+                <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
                     <h5 class="m-2">Si je rencontre des difficultés, je peux...</h5>
                 </div>
                 {% if course.tutoringDescription != null %}
@@ -310,7 +305,7 @@
 
         <div id="Contenu_activites" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
-                <h4 class="text-justify text-left font-weight-bold">
+                <h4 class="text-justify text-left font-weight-bold text-white">
                     Contenu et activités
                 </h4>
             </div>
@@ -408,7 +403,7 @@
 
         <div id="Modalites_evaluation" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
-                <h4 class="text-justify text-left font-weight-bold">
+                <h4 class="text-justify text-left font-weight-bold text-white">
                     Modalités d'évaluation
                 </h4>
             </div>
@@ -472,7 +467,7 @@
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">METHODES D'EVALUATION</h5>
                 </div>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column text-white">
                 {% for section in course.courseSections %}
                     {% set onlyEvaluations = [] %}
                     {% for activity in section.courseSectionActivities if activity.activity.type == "evaluation" %}
@@ -493,30 +488,30 @@
                 </div>
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">CONSEILS PRATIQUES</h5>
-                    <div>
+                    <div class="text-white">
                     {{course.mccAdvice|raw}}
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row mx-3 d-flex flex-row justify-content-around">
+        <div class="row mx-3 d-flex flex-row justify-content-around text-white">
             <div class="col-md-4 media d-flex align-items-center">
-                <div class="border rounded-circle font-weight-bold  p-3 m-3">
+                <div class="border border-info rounded-circle font-weight-bold  p-3 m-3 text-info">
                     <h3 class="font-weight-bold my-2"> {{course.mccWeight}}% </h3>
                 </div>
                 <span class="font-weight-bold media-body"> Poids de l'ECUE dans l'UE </span>
                 <i class="fas fa-2x fa-info-circle"></i>
             </div>
             <div class="col-md-4 media d-flex align-items-center">
-                <i class="fas m-3 fa-4x fa-check-circle"></i>
+                <i class="fas m-3 fa-4x fa-check-circle text-info"></i>
                 <span class="font-weight-bold media-body"> UE compensable </span>
                 <i class="fas fa-2x fa-info-circle"></i>
             </div>
             <div class="col-md-4 media d-flex align-items-center">
                 {% if course.mccCapitalizable == true %}
-                <i class="fas m-3 fa-4x fa-check-circle"></i>
+                <i class="fas m-3 fa-4x fa-check-circle text-info"></i>
                 {% elseif course.mccCapitalizable == false %}
-                <i class="fas m-3 fa-4x fa-times-circle"></i>
+                <i class="fas m-3 fa-4x fa-times-circle text-info"></i>
                 {% endif %}
                 <span class="font-weight-bold media-body"> UE capitalisable </span>
                 <i class="fas fa-2x fa-info-circle"></i>
@@ -526,7 +521,7 @@
 
         <div id="Materiel_ressources" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
-                <h4 class="text-justify text-left font-weight-bold">
+                <h4 class="text-justify text-left font-weight-bold text-white">
                     Matériel et ressources
                 </h4>
             </div>
@@ -539,7 +534,7 @@
                 <h5 class="m-0">MATERIEL OBLIGATOIRE</h5>
             </div>
         </div>
-        <div>
+        <div class="text-white">
             {% for row in course.courseResourceEquipments|batch(3) %}
                 <div class="row mx-3 d-flex flex-row my-3">
                     {% for courseResourceEquipment in row %}
@@ -567,7 +562,7 @@
                 <h5 class="m-0">RESSOUCRES PEDAGOGIQUES</h5>
             </div>
         </div>
-        <div class="row mx-3 d-flex flex-row">
+        <div class="row mx-3 d-flex flex-row text-white">
             {{course.educationalResources|raw}}
         </div>
 
@@ -577,14 +572,14 @@
                 <h5 class="m-0">ELEMENTS BIBLIOGRAPHIQUES</h5>
             </div>
         </div>
-        <div class="row mx-3 d-flex flex-row">
+        <div class="row mx-3 d-flex flex-row text-white">
             {{course.bibliographicResources|raw}}
         </div>
 
 
         <div id="Informations_pratiques" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
-                <h4 class="text-justify text-left font-weight-bold">
+                <h4 class="text-justify text-left font-weight-bold text-white">
                     Informations pratiques
                 </h4>
             </div>
@@ -599,7 +594,7 @@
                 <h5 class="m-0">AGENDA / CALENDRIER</h5>
             </div>
         </div>
-        <div class="row mx-3 d-flex flex-row">
+        <div class="row mx-3 d-flex flex-row text-white">
                  {{course.agenda|raw}}
         </div>
 
@@ -609,14 +604,14 @@
                 <h5 class="m-0">ORGANISATION DU COURS</h5>
             </div>
         </div>
-        <div class="row mx-3 d-flex flex-row">
+        <div class="row mx-3 d-flex flex-row text-white">
                  {{course.organization|raw}}
         </div>
 
 
         <div id="Reglementation" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
-                <h4 class="text-justify text-left font-weight-bold">
+                <h4 class="text-justify text-left font-weight-bold text-white">
                     Réglementation
                 </h4>
             </div>
@@ -625,7 +620,7 @@
             <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <div class="row d-flex flex-row">
-            <div class="col-md-12 d-flex flex-row justify-content-center align-items-center">
+            <div class="col-md-12 d-flex flex-row justify-content-center align-items-center text-white">
                 <h5 class="m-2">En m'inscrivant à l'université, je m'engage à respecter le règlement des études ci-après :</h5>
             </div>
         </div>
@@ -633,7 +628,7 @@
 
         <div id="Mot_fin" class="row mx-3 d-flex flex-row">
             <div class="col-md-6 p-0">
-                <h4 class="text-justify text-left font-weight-bold">
+                <h4 class="text-justify text-left font-weight-bold text-white">
                     Mot de la fin
                 </h4>
             </div>
@@ -642,7 +637,7 @@
             <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
 
-        <div class="row mx-3 d-flex flex-row">
+        <div class="row mx-3 d-flex flex-row text-white">
             {{course.closingRemarks|raw}}
         </div>
 
