student view table colors fix

--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -431,11 +431,11 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-info">
+                            <tr class="bg-info">
                             <td>Contrôle Continu ({{course.mccCcNbEvalSession1}} minimum)</td>
                             <td> {{course.mccCcCoeffSession1}}%</td>
                             </tr>
-                            <tr class="table-primary">
+                            <tr class="bg-primary">
                             <td>Contrôle Terminal - {{course.mccCtDurationSession1}} </td>
                             <td>{{course.mccCtCoeffSession1}}%</td>
                             </tr>
@@ -454,7 +454,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-info">
+                            <tr class="bg-info">
                             <td>Contrôle Terminal - {{course.mccCtDurationSession2}} </td>
                             <td>{{course.mccCtCoeffSession2}}%</td>
                             </tr>
