student view spacing

--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -228,7 +228,7 @@
         </div>
 
 
-        <div id="Objectifs_cours" class="row mx-3 d-flex flex-row">
+        <div id="Objectifs_cours" class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Objectifs du cours
@@ -265,7 +265,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row justify-content-around">
+        <div class="row mx-3 mt-5 d-flex flex-row justify-content-around">
             <div class="col-md-6 pl-0" >
                 <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">PREREQUIS</h5>
@@ -303,7 +303,7 @@
 
         
 
-        <div id="Contenu_activites" class="row mx-3 d-flex flex-row">
+        <div id="Contenu_activites" class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Contenu et activités
@@ -401,7 +401,7 @@
 
 
 
-        <div id="Modalites_evaluation" class="row mx-3 d-flex flex-row">
+        <div id="Modalites_evaluation" class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Modalités d'évaluation
@@ -486,7 +486,7 @@
                     {% endfor %}
                 {% endfor %}
                 </div>
-                <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
+                <div class="col-md-12 mt-5 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                     <h5 class="m-0">CONSEILS PRATIQUES</h5>
                     <div class="text-white">
                     {{course.mccAdvice|raw}}
@@ -519,7 +519,7 @@
         </div>
 
 
-        <div id="Materiel_ressources" class="row mx-3 d-flex flex-row">
+        <div id="Materiel_ressources" class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Matériel et ressources
@@ -557,7 +557,7 @@
             {% endfor %} 
         </div>
 
-        <div class="row mx-3 d-flex flex-row">
+        <div class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                 <h5 class="m-0">RESSOUCRES PEDAGOGIQUES</h5>
             </div>
@@ -567,7 +567,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                 <h5 class="m-0">ELEMENTS BIBLIOGRAPHIQUES</h5>
             </div>
@@ -577,7 +577,7 @@
         </div>
 
 
-        <div id="Informations_pratiques" class="row mx-3 d-flex flex-row">
+        <div id="Informations_pratiques" class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Informations pratiques
@@ -599,7 +599,7 @@
         </div>
 
 
-        <div class="row mx-3 d-flex flex-row">
+        <div class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-12 p-2 border border-info bg-light text-info rounded d-flex flex-row justify-content-center align-items-center">
                 <h5 class="m-0">ORGANISATION DU COURS</h5>
             </div>
@@ -609,7 +609,7 @@
         </div>
 
 
-        <div id="Reglementation" class="row mx-3 d-flex flex-row">
+        <div id="Reglementation" class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Réglementation
@@ -626,7 +626,7 @@
         </div>
 
 
-        <div id="Mot_fin" class="row mx-3 d-flex flex-row">
+        <div id="Mot_fin" class="row mx-3 mt-5 d-flex flex-row">
             <div class="col-md-6 p-0">
                 <h4 class="text-justify text-left font-weight-bold text-white">
                     Mot de la fin
