Start objectives tab

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -16,6 +16,7 @@
 
 html {
     height: 100%;
+    font-size: 14px;
 }
 
 body {
@@ -73,7 +74,7 @@ input[type=text] {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    padding: 14px 5px 5px;
+    padding: 1rem 0.6rem 0.6rem;
     margin: 0px;
     -webkit-transition: all 0.30s ease-in-out;
     -moz-transition: all 0.30s ease-in-out;
@@ -83,7 +84,7 @@ input[type=text] {
 
     &::placeholder {
         color: lightgrey;
-        font-size: 0.8em;
+        font-size: 0.9em;
         font-style: italic;
     }
 
@@ -96,8 +97,8 @@ input[type=text] {
     & + label[placeholder] {
         display: block;
         pointer-events: none;
-        line-height: 46px;
-        margin-top: -46px;
+        line-height: 36px;
+        margin-top: -36px;
 
         &:before {
             content: attr(placeholder);
