--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -44,7 +44,7 @@
 
                 <li class="nav-item">
                     <a class="nav-link" id="tab-3"
-                       data-route=""
+                       data-route="{{ path('edit_objectives_course_info', { 'id': courseInfo.id }) }}"
                        role="tab" data-toggle="tab" href="#panel_tab-3"
                        aria-controls="panel_tab-3" aria-selected="false">
                         Objectifs du cours
