--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -160,13 +160,14 @@ form ul.list-group {
     Sections & Activities
 */
 
-.section {
+.section,
+.achievement {
 
     & i.fas {
 
         cursor: pointer;
 
-        &.section-collection-remove {
+        &.fa-trash-alt {
             color: $danger;
         }
     }
