student view description text white

--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -110,8 +110,8 @@
 
 
         <div class="row d-flex flex-row m-3">
-            <div class="col-md-5">
-                <p class="text-justify text-left text-white">
+            <div class="col-md-5 text-white">
+                <p class="text-justify text-left">
                     {{course.summary|raw}}
                 </p>
                 <p class="text-justify text-left text-white">
