Back-end form closing remarks tab

--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -80,7 +80,7 @@
 
                 <li class="nav-item">
                     <a class="nav-link" id="tab-7"
-                       data-route=""
+                       data-route="{{ path('edit_closing_remarks_course_info', { 'id': courseInfo.id }) }}"
                        role="tab" data-toggle="tab" href="#panel_tab-7"
                        aria-controls="panel_tab-7" aria-selected="false">
                         Le mot de la fin
