--- a/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
@@ -5,7 +5,26 @@
 {% endblock %}
 
 {% block main %}
+    {{ form_start(form) }}
+    
+    <div class="row mt-3">
+        <div class="col">
+            <h6 class="my-3">
+                Espace pour laisser un message à vos étudiants (encouragements, derniers conseils...)
+            </h6>
+            {{form_widget(form.closingRemarks)}}
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col">
+            <button class="btn btn-outline-primary btn-block submit" type="submit">
+                <i class="fas fa-save"></i>
+                Enregistrer
+            </button>
+        </div>
+    </div>
 
+    {{ form_end(form) }}
 
 {% endblock %}
 
