init classes for infos tab

--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -71,7 +71,7 @@
 
                 <li class="nav-item">
                     <a class="nav-link" id="tab-6"
-                       data-route=""
+                       data-route="{{ path('edit_infos_course_info', { 'id': courseInfo.id }) }}"
                        role="tab" data-toggle="tab" href="#panel_tab-6"
                        aria-controls="panel_tab-6" aria-selected="false">
                         Informations pratiques
