--- a/app/Resources/views/course/edit_infos_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_infos_course_info_tab.html.twig
@@ -9,10 +9,21 @@
     
     <div class="row mt-3">
         <div class="col">
-            <h6 class="my-3">
-                Espace pour laisser un message à vos étudiants (encouragements, derniers conseils...)
+            <h6 class="mt-3">
+                Indiquer toutes les informations dont vous disposez sur le calendrier du cours, des examens...
             </h6>
-            {{form_widget(form.closingRemarks)}}
+            <h6>
+                Vous pouvez aussi partager un emploi du temps (image Excel, lien web...)
+            </h6>
+            {{form_widget(form.agenda)}}
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col">
+            <h6 class="mt-3">
+                Comment allez-vous organiser votre cours ?
+            </h6>
+            {{form_widget(form.organization)}}
         </div>
     </div>
     <div class="row mt-3">
@@ -36,7 +47,7 @@
             /**
              * Submit the form
              */
-            $("form[name='edit_closing_remarks_course_info']").submit(function(e){
+            $("form[name='edit_infos_course_info']").submit(function(e){
                 e.preventDefault();
 
                 for ( instance in CKEDITOR.instances ) {
@@ -53,7 +64,7 @@
                             enctype: 'multipart/form-data',
                             processData: false,  // Important!
                             contentType: false,
-                            url: '{{ path('save_closing_remarks_course_info', { 'id': courseInfo.id })|escape('js') }}',
+                            url: '{{ path('save_infos_course_info', { 'id': courseInfo.id })|escape('js') }}',
                             data: data,
                             cache: false,
                             timeout: 600000
