bootstrap toggle style

--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -169,7 +169,13 @@
     <script>
 
         $(document).ready(function() {
-            $('#edit_objectives_course_info_tutoring').bootstrapToggle();
+            $('#edit_objectives_course_info_tutoring').bootstrapToggle({
+                on: 'Oui',
+                off: 'Non',
+                onstyle: 'primary',
+                offstyle: 'secondary',
+                size: 'sm'
+            });
 
             /**
              * Init achievements collection
