Add tutoring resources in command

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -97,3 +97,14 @@ $input-disabled-bg: $gray-100;
 //@import '~bootstrap/scss/print';
 */
 
+/*
+Bootstrap-toggle
+ */
+
+.toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20rem; }
+.toggle.ios .toggle-handle { border-radius: 20rem; }
+
+label.toggle-on,
+label.toggle-off {
+    cursor: pointer;
+}
