--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -135,14 +135,16 @@
                         <div class="col-md-auto">
                             <span>Assister à des séances de tutorat ?</span>
                         </div>
-                        <div class="col-md-auto" data-toggle="collapse" href="#collapseTutoring" role="button" 
+                        <div class="col-md-auto" data-toggle="collapse" href="#collapseTutoring" role="button"
                         aria-expanded"{{ (form.vars.data.tutoring == 1) ? 'true' : 'false'}}" aria-controls="collapseTutoring">
                             {{ form_widget(form.tutoring) }}
                         </div>
                     </div>
-                    <div class="row collapse {{ (form.vars.data.tutoring == 1) ? 'show' : '' }}" id="collapseTutoring" >
+                    <div class="row mt-3 collapse {{ (form.vars.data.tutoring == 1) ? 'show' : '' }}" id="collapseTutoring" >
                         <div class="col-md-auto">
                             {{ form_widget(form.tutoringTeacher)}}
+                        </div>
+                        <div class="col-md-auto">
                             {{ form_widget(form.tutoringStudent)}}
                         </div>
                     </div>
@@ -181,7 +183,8 @@
                 off: 'Non',
                 onstyle: 'primary',
                 offstyle: 'secondary',
-                size: 'sm'
+                size: 'sm',
+                style: 'ios'
             });
 
             /**
@@ -228,7 +231,7 @@
             prerequisitesCollectionHolder.data('index', prerequisitesCollectionHolder.find('li.prerequisite').length);
             prerequisitesCollectionHolder.sortable({
                 group: {
-                    name: "prerequisites",
+                    name: "prerequisites"
                 },
                 handle: ".prerequisite-collection-move",
                 sort: true,
