--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -147,11 +147,16 @@
                         </div>
                             {{ form_widget(form.tutoringDescription) }}
                     </div>
+                    <div class="row mt-3">
+                        <div class="col">
+                            {{ form_widget(form.tutoringResources) }}
+                        </div>
+                    </div>
                     <div class="row mt-2">
                         <div class="col">
                             <button type="button" class="btn btn-primary btn-block" id="addPrerequisiteButton">
                                 <i class="fas fa-plus-circle"></i>
-                                Ajouter un prérequis
+                                Ajouter une remédiation
                             </button>
                         </div>
                     </div>
@@ -260,6 +265,42 @@
             });
 
             /**
+             * Init tutoringResources collection
+             */
+            var tutoringResourcesCollectionHolder = $('#tutoringResources');
+            tutoringResourcesCollectionHolder.data('index', tutoringResourcesCollectionHolder.find('li.tutoringResource').length);
+            tutoringResourcesCollectionHolder.sortable({
+                group: {
+                    name: "tutoringResources"
+                },
+                handle: ".tutoringResource-collection-move",
+                sort: true,
+                animation: 150
+            });
+
+            /**
+             * Add a tutoringResource when button click
+             */
+            $('#addtutoringResourceButton').click(function () {
+                var form = addFormToCollection(tutoringResourcesCollectionHolder);
+                form.find('input[id$=_description]').focus();
+            });
+
+            /**
+             * Remove a tutoringResource from collection
+             */
+            tutoringResourcesCollectionHolder.on('click', '.tutoringResource-collection-remove', function () {
+                if (confirm("Êtes-vous sûr(e) de vouloir supprimer cette remédiation ?")) {
+                    var form = $(this).closest("li.tutoringResource");
+                    form.fadeOut({
+                        always: function () {
+                            form.remove();
+                        }
+                    });
+                }
+            });
+
+            /**
              * Submit the form
              */
             $("form[name='edit_objectives_course_info']").submit(function(e){
@@ -283,6 +324,16 @@
                     // Set section order
                     $(this).find("input[id$='_order']").each(function(){
                         if($(this).attr("id").match(/^edit_objectives_course_info_prerequisites_[\d]+_order/)){
+                            $(this).val(order+1);
+                        }
+                    });
+                });
+
+                // Set tutoringResources order
+                tutoringResourcesCollectionHolder.find('li.tutoringResource').each(function(order){
+                    // Set section order
+                    $(this).find("input[id$='_order']").each(function(){
+                        if($(this).attr("id").match(/^edit_objectives_course_info_tutoringResources_[\d]+_order/)){
                             $(this).val(order+1);
                         }
                     });
